Show deadline on task display

--- a/src/main/views/task-display.njk
+++ b/src/main/views/task-display.njk
@@ -97,6 +97,17 @@
         actions: {
           items: []
         }
+      },
+      {
+        key: {
+          text: "Deadline"
+        },
+        value: {
+          html: task.dueDateTime
+        },
+        actions: {
+          items: []
+        }
       }
     ]
   }) }}
