Added task lookup functionality

--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -1,11 +1,10 @@
-{% from "task-display.njk" import taskDisplay %}
+{% from "macros/task-display.njk" import taskDisplay %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% extends "template.njk" %}
 
 {% block content %}
-  <h1 class="govuk-heading-xl">HMCTS Task Management</h1>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-third-from-desktop">
@@ -41,7 +40,7 @@
 
     {% else %}
 
-      <p>Error: Not Found</p>
+      <p>API Error</p>
 
     {% endif %}
   </div>
