--- a/src/main/views/macros/task-display.njk
+++ b/src/main/views/macros/task-display.njk
@@ -13,7 +13,7 @@
         actions: {
           items: [
             {
-              href: "#",
+              href: "/delete-task/" + task.id,
               text: "Delete",
               visuallyHiddenText: "Delete Task"
             }
@@ -63,7 +63,7 @@
         actions: {
           items: [
           {
-              href: "#",
+              href: "/update-status/" + task.id,
               text: "Update",
               visuallyHiddenText: "Delete Task"
             }
